# cube-cli

./: CLAUDE.md  Cargo.toml  Cargo.toml-e  README.md  install.sh  justfile
.claude/skills/: cube
.github/: homebrew-formula.rb
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
cube-skill/: SKILL.md
src/: db.rs  error.rs  formatter.rs  main.rs  version.rs
src/commands/: clean.rs  feedback.rs  key.rs  mod.rs  query.rs  schema.rs  sql.rs  sync.rs
tests/: cli.rs
