[package]
name = "cube"
version = "0.1.0"
edition = "2021"
description = "CLI pour interroger des fichiers SQLite exportés depuis le datawarehouse UNISIS"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
anyhow = "1"
csv = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
